--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ bytes = "1.10.1"
 futures = "0.3.31"
 async-trait = "0.1.88"
 pprof = { version = "0.15.0", features = ["flamegraph"] }
+arrow = "55.1.0"
 
 [[bin]]
 name = "clickbench"
